<resources>
    <string name="app_name">Calculo de notas</string>
    <string name="tv1">Universidad Mariana</string>
    <string name="tvnotafin1">Nota Final</string>
    <string name="tv2">Materias Noveno semestre</string>
    <string name="tv3">Desarrollo Movil</string>
    <string name="et4">Ingrese nota primer corte:</string>
    <string name="et5">Ingrese nota segundo corte:</string>
    <string name="et6">Ingrese nota tercer corte:</string>
    <string name="tv7">Seguridad Informatica</string>
    <string name="et8">Ingrese nota primer corte:</string>
    <string name="et9">Ingrese nota segundo corte:</string>
    <string name="et10">Ingrese nota tercer corte:</string>
    <string name="tv11">Desarrollo en Frameworks</string>
    <string name="et12">Ingrese nota primer corte:</string>
    <string name="et13">Ingrese nota segundo corte:</string>
    <string name="et14">Ingrese nota tercer corte:</string>
    <string name="tv15">Programacion con restricciones</string>
    <string name="et16">Ingrese nota primer corte:</string>
    <string name="et17">Ingrese nota segundo corte:</string>
    <string name="et18">Ingrese nota tercer corte:</string>
    <string name="tv19">Ing. de Software</string>
    <string name="et20">Ingrese nota primer corte:</string>
    <string name="et21">Ingrese nota segundo corte:</string>
    <string name="et22">Ingrese nota tercer corte:</string>
    <string name="tv23">Definitiva :</string>
    <string name="btn1">Calcular</string>
    <string name="tv24">Definitiva</string>
    <string name="tv25">Definitiva</string>
    <string name="tv26">Definitiva</string>
    <string name="btn2">Calcular</string>
    <string name="btn3">Calcular</string>
    <string name="btn4">Calcular</string>
    <string name="btn55">Calcular</string>
    <string name="btn5">Promedio</string>
    <string name="btn6">Ayuda</string>
    <string name="tvnotafin2">Nota Final</string>
    <string name="tvnotafin3">Nota Final</string>
    <string name="tvnotafin4">Nota Final</string>
    <string name="tv90">Desarrollado por: Marlon Timaran</string>
    <string name="tv91">Correo: marltimaran@umariana.edu.co</string>
    <string name="tv92">Se debe tener encuenta que el calculo relizado en esta aplicacion es de la siguiente manera (((nota1 + nota2) / 2) * 0.6) + (nota3 * 0.4)</string>
    <string name="tv93">Universidad Mariana</string>
    <string name="btn94">Salir</string>
    <string name="txtcampos">Complete los campos !!</string>
    <string name="txtcampos1">Complete los campos !!</string>
    <string name="tvBie">BIENVENIDO</string>
    <string name="notificacion3">Verifique, la nota no puede ser mayor a 5 !!</string>
    <string name="noti3">Verifique, la nota no puede ser mayor a 5</string>
    <string name="noti1">Verifique, la nota no puede ser mayor a 5</string>
    <string name="noti2">Verifique, la nota no puede ser mayor a 5</string>
    <string name="noti4">Verifique, la nota no puede ser mayor a 5</string>
    <string name="noti5">Verifique, la nota no puede ser mayor a 5</string>
    <string name="noti6">Verifique, la nota no puede ser mayor a 5</string>
    <string name="noti7">Verifique, la nota no puede ser mayor a 5</string>
    <string name="noti8">Verifique, la nota no puede ser mayor a 5</string>
    <string name="noti9">Verifique, la nota no puede ser mayor a 5</string>
    <string name="noti10">Verifique, la nota no puede ser mayor a 5</string>
    <string name="noti11">Verifique, la nota no puede ser mayor a 5</string>
    <string name="noti12">Verifique, la nota no puede ser mayor a 5</string>
    <string name="noti65">Ponderado</string>
    <string name="vacio">Complete los campos</string>
    <string name="vacio1">Campo vacio Nota 1</string>
</resources>